ver 0.1.0-beta.4 - READMEに楽曲ファイルへの規約不適用について追記 - title画面→list画面への遷移を実装(list画面にはまだなにもないけど)

--- a/style/common.css
+++ b/style/common.css
@@ -54,6 +54,7 @@ body>main#fade {
 body>main#fade.fading {
     opacity: 1;
     pointer-events: auto;
+    background: linear-gradient(to bottom, hsl(240, 20%, 15%), hsl(240, 20%, 5%));
 }
 
 /* 文字色とフォントの変更 */
